k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: quotes
  name: quotes
spec:
  ports:
  - name: 9090-9090
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: quotes
  type: ClusterIP
status:
  loadBalancer: {}
