k8s/networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: allow-quotes-to-postgres
  namespace: quotes
spec:
  podSelector:
    matchLabels:
      app: postgres
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: quotes
  policyTypes:
  - Ingress
